--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img class="moviePic" src="poster.jpg" alt="Movie Poster">
+  <p class="movieDetail">Movie Description</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
